@@ -433,18 +433,13 @@ void select_loop(void (*init)(void))
 #ifdef DEBUG_CALLS
 		fprintf(stderr, "select\n");
 #endif
-#ifdef PSP
-		tv.tv_sec = 0;
-		tv.tv_usec = 1*1000;
-		tm = &tv;
-		pspInputThread();
-#endif
 		if ((n = loop_select(w_max, &x_read, &x_write, &x_error, tm)) < 0) {
 #ifdef DEBUG_CALLS
 			fprintf(stderr, "select intr\n");
 #endif
 #ifdef PSP
 			printf("select returns -1 -- errno=%d!\n", errno);
+			wait_for_triangle("Error.");
 #else
 			if (errno != EINTR) error("ERROR: select failed: %d", errno);
 			continue;
